qnd: Java client library - make the library android compatible
git-svn-id: svn+ssh://kelev.kaltura.com/usr/local/kalsource/backend/server/trunk/core@86204 6b8eccd3-e8c5-4e7d-8186-e12b5326b719